--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -549,11 +549,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="cleartracks/up-commemorative-pack.html" class="mod-card-link">
+                        <a href="cleartracks/up-commemorative-pack" class="mod-card-link">
                             <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_4a90644a7b4d4a09a79f7fc3d7861898~mv2.png');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="cleartracks/up-commemorative-pack.html" class="mod-card-link">
+                            <a href="cleartracks/up-commemorative-pack" class="mod-card-link">
                                 <h3 class="mod-card-title">UP Commemorative Pack</h3>
                             </a>
                             <p class="mod-card-description">Union Pacific 1111 and 4141 </p>
