--- a/trurail-simulations/canpac-ac4400cw-striped-plow.html
+++ b/trurail-simulations/canpac-ac4400cw-striped-plow.html
@@ -12,7 +12,7 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.trainsimarchive.org/trurail-simulations/canpac-ac4400cw-striped-plow.html">
+    <meta property="og:url" content="https://www.trainsimarchive.org/trurail-simulations/canpac-ac4400cw-striped-plow">
     <meta property="og:title" content="CanPac AC4400CW Striped Plow">
     <meta property="og:description" content="Repaint of GE's AC4400CW into the CP 'Striped Plow' scheme.">
     <meta property="og:image" content="https://files.trainsimarchive.org/media/14a601_58e062213a224ffa87e3b5c9f4c752a9~mv2.jpg">
@@ -20,7 +20,7 @@
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.trainsimarchive.org/trurail-simulations/canpac-ac4400cw-striped-plow.html">
+    <meta property="twitter:url" content="https://www.trainsimarchive.org/trurail-simulations/canpac-ac4400cw-striped-plow">
     <meta property="twitter:title" content="CanPac AC4400CW Striped Plow">
     <meta property="twitter:description" content="Repaint of GE's AC4400CW into the CP 'Striped Plow' scheme.">
     <meta property="twitter:image" content="https://files.trainsimarchive.org/media/14a601_58e062213a224ffa87e3b5c9f4c752a9~mv2.jpg">
@@ -88,14 +88,14 @@
     <main class="mod-exconrail-main">
         <div class="mod-exconrail-section">
             <div class="text-gray-400 mb-2">
-                <a href="../index.html" class="hover:underline">Home</a> >
-                <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a> >
+                <a href="../index" class="hover:underline">Home</a> >
+                <a href="../trurail-simulations" class="hover:underline">TruRail Simulations</a> >
                 <span>CanPac AC4400CW Striped Plow</span>
             </div>
             <div class="flex justify-between items-start mb-2">
                 <div>
                     <h1 class="text-2xl font-bold">CanPac AC4400CW Striped Plow</h1>
-                    <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a></p>
+                    <p class="text-gray-400">By <a href="../trurail-simulations" class="hover:underline">TruRail Simulations</a></p>
                 </div>
                 <div class="download-section">
                     <a href="#" 
@@ -185,9 +185,9 @@
     <footer id="dynamicFooter">
         <div class="footer-content">
             <div class="footer-nav">
-                <a href="../terms.html">Terms of Use</a>
+                <a href="../terms">Terms of Use</a>
                 <span class="separator">•</span>
-                <a href="../privacy.html">Privacy Policy</a>
+                <a href="../privacy">Privacy Policy</a>
                 <span class="separator">•</span>
                 <a href="https://www.facebook.com/groups/trainsimulatormodarchive" target="_blank" title="Facebook Group">
                     <i class="fab fa-facebook"></i>
