--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -573,11 +573,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/yorkrail-gp9" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_3ca27124e1b04056999b9ad0c31b06a0~mv2.png');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/yorkrail-gp9" class="mod-card-link">
                                 <h3 class="mod-card-title">YorkRail GP9</h3>
                             </a>
                             <p class="mod-card-description">Repaint of EMD's GP9 in YorkRail scheme.</p>
