--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@
                     </li>
                 </ul>
             </div>
+            <div class="sidebar-section">
+                <h3 class="text-base font-bold mb-3">Top Downloads</h3>
+                <ul class="space-y-2" id="topDownloadsSlidebarContainer" style="opacity: 0; transition: opacity 0.5s ease-in; list-style: none; padding-left: 0; margin: 0;">
+                    <li><div class="spinner-border" role="status" style="width: 1.5rem; height: 1.5rem;"><span class="visually-hidden">Loading...</span></div></li>
+                </ul>
+            </div>
     </main>
     <footer id="dynamicFooter">
         <div class="footer-content">
