--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -453,8 +453,8 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/ols-f59phi-pack" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_a368fead618e47288a6cf38471a4f927~mv2.png');"></div>
                         </a>
                         <div class="mod-card-content">
                             <a href="trurail-simulations/ols-f59phi-pack" class="mod-card-link">
