--- a/trurail-simulations/ols-f59phi-pack.html
+++ b/trurail-simulations/ols-f59phi-pack.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://www.trainsimarchive.org/trurail-simulations/ols-f59phi-pack">
     <meta property="og:title" content="Operation Lifesaver F59PHI Pack">
     <meta property="og:description" content="Four repaints of EMD's F59PHI locomotive ordered by Amtrak to depict the 'OLS' units">
-    <meta property="og:image" content="https://files.trainsimarchive.org/media/14a601_160a10c4b6ea442d89ff1820746b7d08~mv2.jpg">
+    <meta property="og:image" content="https://files.trainsimarchive.org/media/14a601_a368fead618e47288a6cf38471a4f927~mv2.png">
     <meta property="og:site_name" content="Train Simulator Mod Archive">
     
     <!-- Twitter -->
@@ -23,7 +23,7 @@
     <meta property="twitter:url" content="https://www.trainsimarchive.org/trurail-simulations/ols-f59phi-pack">
     <meta property="twitter:title" content="Operation Lifesaver F59PHI Pack">
     <meta property="twitter:description" content="Four repaints of EMD's F59PHI locomotive ordered by Amtrak to depict the 'OLS' units">
-    <meta property="twitter:image" content="https://files.trainsimarchive.org/media/14a601_160a10c4b6ea442d89ff1820746b7d08~mv2.jpg">
+    <meta property="twitter:image" content="https://files.trainsimarchive.org/media/14a601_a368fead618e47288a6cf38471a4f927~mv2.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.jpg" as="image">
@@ -104,8 +104,8 @@
                 <div class="download-section">
                     <a href="#" 
                        class="mod-exconrail-download-button download-trigger" 
-                       data-url="https://files.trainsimarchive.org/TRS%20-%20GP38-2_MOPAC.rar"
-                       data-name="TRS - GP38-2_MOPAC.rar">
+                       data-url="https://files.trainsimarchive.org/TRS%20-%20F59PHI_OLS_Pack.zip"
+                       data-name="TRS - F59PHI_OLS_Pack.zip">
                         Download
                     </a>
                 </div>
@@ -114,7 +114,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_160a10c4b6ea442d89ff1820746b7d08~mv2.jpg" alt="Operation Lifesaver F59PHI Pack">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_a368fead618e47288a6cf38471a4f927~mv2.png" alt="Operation Lifesaver F59PHI Pack">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -128,11 +128,11 @@
                         </div>
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(0)" data-index="0">
-                                <img src="https://files.trainsimarchive.org/media/14a601_160a10c4b6ea442d89ff1820746b7d08~mv2.jpg" alt="Image 1">
+                                <img src="https://files.trainsimarchive.org/media/14a601_a368fead618e47288a6cf38471a4f927~mv2.png" alt="Image 1">
                             </div>
                         </div>
                     </div>
-                    <p class="page-updated">Page Updated: 02/02/2026</p>
+                    <p class="page-updated">Page Updated: 02/13/2026</p>
                 </div>
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
@@ -153,18 +153,18 @@
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
                         <li><a href="https://store.steampowered.com/app/222606/Train_Simulator_Pacific_Surfliner_LA__San_Diego_Route/" target="_blank">Pacific Surfliner® LA - San Diego Route </a></li>
                     </ul>
-                    <div class="file-details-box" data-name="TRS - GP38-2_MOPAC.rar">
+                    <div class="file-details-box" data-name="TRS - F59PHI_OLS_Pack.zip">
                         <a href="#" 
                            class="download-trigger" 
-                           data-url="https://files.trainsimarchive.org/TRS%20-%20GP38-2_MOPAC.rar"
-                           data-name="TRS - GP38-2_MOPAC.rar"
+                           data-url="https://files.trainsimarchive.org/TRS%20-%20F59PHI_OLS_Pack.zip"
+                           data-name="TRS - F59PHI_OLS_Pack.zip"
                            style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
                             <div style="display: flex; align-items: center; gap: 0.75rem;">
                                 <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
                                     <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
                                 </div>
                                 <div style="flex: 1;">
-                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">TRS - GP38-2_MOPAC.rar</div>
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">TRS - F59PHI_OLS_Pack.zip</div>
                                     <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
                                         <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
                                         <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
