--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <meta name="keywords" content="train simulator, mods, archive, trurail simulations, clearTracks, UTS creations, east coast simulations">
     <meta name="application-name" content="Train Simulator Mod Archive">
     <title>Home - Train Simulator Mod Archive</title>
-
-    <link rel="icon" type="image/jpeg" href="favicon/favicon.ico">
-
+    
+    <link rel="icon" href="favicon/favicon.ico">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/">
-    <meta name="application-name" content="Train Simulator Mod Archive">
     <meta property="og:description" content="The largest web archive of delisted and lost Train Simulator Classic content.">
     <meta property="og:image" content="https://files.trainsimarchive.org/media/tsma-logo.png">
     <meta property="og:site_name" content="Train Simulator Mod Archive">
-
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.trainsimarchive.org/">
     <meta property="twitter:title" content="Train Simulator Mod Archive">
@@ -33,6 +30,16 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
+    <link rel="canonical" href="https://www.trainsimarchive.org/">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Train Simulator Mod Archive",
+      "alternateName": "Train Sim Archive",
+      "url": "https://www.trainsimarchive.org/"
+    }
+    </script>
 </head>
 <body class="body-with-fixed-header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
